--- a/css/style.css
+++ b/css/style.css
@@ -316,3 +316,14 @@ img {
   .cover-contact {
     background-image: url(../images/cover-contact-s.webp);
   }
+
+  /*店舗情報*/
+  .location {
+    margin-bottom: 3.5rem;
+  }
+  .location-info {
+    margin-bottom: 2rem;
+  }
+  .location-info .info {
+    padding: 0;
+  }
